major issue in flex gap solved

--- a/styles/style.css
+++ b/styles/style.css
@@ -416,7 +416,7 @@
 .explore-images {
   margin: 2rem 10rem;
   /* border: 2px solid green; */
-  width: 100%;
+  max-width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -424,6 +424,7 @@
   gap: 2rem;
 }
 .exp-img{
+  max-width: 100%;
   flex-basis: 24rem;
 }
 .explore .primary-description{
